--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>bmx-behemoth</name>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -91,7 +93,12 @@ clear
         </dependency>
         <dependency>
             <groupId>com.bloomscorp</groupId>
-            <artifactId>nverse</artifactId>
+            <artifactId>bmx-nverse</artifactId>
+            <version>0.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bloomscorp</groupId>
+            <artifactId>bmx-raintree</artifactId>
             <version>0.0.1</version>
         </dependency>
     </dependencies>
